--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a href="https://github.com/Udesha-SMS"><i class='bx bxl-github' ></i></a>
             </div>
 
-            <a href="" class="btn">Download CV</a>
+            <a href="S M S Udesha CV.pdf" class="btn">Download CV</a>
 
         </div>
 
